[package]
name = "rust-kernel"
version = "0.1.0"
authors = ["RanXom <saiyedshizain@gmail.com>"]
edition = "2024"

[[bin]]
name = "rust-kernel"
test = false
bench = false

[dependencies]
volatile = "0.2.6"
bootloader = "0.9"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
