[package]
name = "rust-kernel"
version = "0.1.0"
authors = ["RanXom <saiyedshizain@gmail.com>"]
edition = "2024"

[[bin]]
name = "rust-kernel"
test = true
bench = false

[dependencies]
volatile = "0.2.6"
bootloader = "0.9"
spin = "0.12.0"
x86_64 = "0.14.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33

# [profile.dev]
# panic = "abort"
#
# [profile.release]
# panic = "abort"
